# sudoku

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cpplint.py  hello.cpp  run.sh  todo.md
games/: game.txt  sudoku.txt
include/: config.h  game.h  solver.h  tools.h
lib/: generate_game.h  macro.h  save_game.h  solver.h
report/: main.aux  main.out  main.tex  main.toc
src/: game.cpp  main.cpp  solver.cpp  tools.cpp
test/: test.cpp
